# AspenCapitalTakehome

./: .gitignore  .travis.yml  README.md
api/: Cargo.toml  Rocket.toml  sqlx-data.json
api/migrations/: 20230421034457_table-setup.sql
api/src/: main.rs  war.rs
