[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "offline"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]

[default.databases.postgres_score]
url = "postgres://postgres:mysecretpassword@localhost:5432/postgres"
